linux_iptables_example.txt
# Generated by iptables-save v1.4.7 on Wed May 31 11:22:00 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [83:14332]

-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 47 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 

-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 

COMMIT
# Completed on Wed May 31 11:22:00 2017




/etc/sysconfig/iptables

iptables -L -vn
service iptables save
service iptables reload
service iptables status
service iptables start





*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s localhost -d localhost -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#Ping洪水攻击
-A FORWARD -p icmp --icmp-type echo-request -m limit --limit 1/s -j ACCEPT

#HTTPS
-A INPUT -p tcp --dport 443 -j ACCEPT
#POP3
-A INPUT -p tcp --dport 110 -j ACCEPT
#SMTP
-A INPUT -p tcp --dport 25 -j ACCEPT
#FTP
-A INPUT -p tcp --dport 21 -j ACCEPT
-A INPUT -p tcp --dport 20 -j ACCEPT
#DNS
-A INPUT -p tcp --dport 53 -j ACCEPT

#端口白名单
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 47 -j ACCEPT 

#ip白名单
#-A INPUT -s 183.63.90.55/32 -j ACCEPT

COMMIT
